fix horizontal scroll
pour quand ce pd de miaouss envoie les caractères qui ne vont pas à la ligne

--- a/static/style.css
+++ b/static/style.css
@@ -99,6 +99,7 @@ table {
 
 td {
     height: 34px;
+    overflow: hidden;
 }
 
 tr:nth-child(odd) {
